# slime-mold

./: .gitignore  Cargo.toml  README.md  simulation_settings.hjson  simulation_settings.toml  simulation_settings_template.hjson  simulation_settings_template.toml
arm-build/: Dockerfile  README.md
arm-build/.cargo/: config
shaders/: agent.frag  pheromone.frag
src/: agent.rs  bind_group_manager.rs  compute.wgsl  display.wgsl  errors.rs  lib.rs  lut_manager.rs  main.rs  midi.rs  pheromones.rs  pipeline_manager.rs  point2.rs  presets.rs  quad.wgsl  rect.rs  settings.rs  shader.wgsl  shader_manager.rs  simulation.rs  swapper.rs  text.wgsl  text_renderer.rs  util.rs  world.rs
src/midi/: interface.rs  mod.rs  summit.rs
src/shaders/: box_blur.wgsl  decay.wgsl  deposit.wgsl  diffuse.wgsl  world_convert.wgsl
