[package]
name = "slime"
version = "0.1.0"
authors = ["Zelda Hessler <zelda.hessler@tempus.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
midi = ["midir", "midly"]

[dependencies]
anyhow = "1.0.98"
bytemuck = { version = "1.23.0", features = ["derive"] }
circular-queue = "0.2.6"
colorgrad = "0.7.1"
config = "0.15.11"
dotenv = "0.15.0"
env_logger = "0.11.8"
fontdue = "0.9.3"
grid = "0.16.2"
lazy_static = "1.5.0"
log = "0.4.14"
midir = { version = "0.7.0", optional = true }
midly = { version = "0.5.1", optional = true }
nalgebra = "0.33.2"
notify = "5.0.0-pre.7"
num = "0.4.0"
num-format = { version = "0.4.3", features = ["with-system-locale"] }
pollster = "0.3.0"
rand = { version = "0.9.1", features = ["small_rng"] }
rayon = "1.5.0"
serde = { version = "1.0.125", features = ["derive"] }
thiserror = "2.0.12"
typed-builder = "0.21.0"
wgpu = { version = "0.20.0" }
winit = "0.29.0"
winit_input_helper = "0.16.0"
