[package]
name = "slime"
version = "0.2.0"
authors = ["Zelda Hessler <zelda.hessler@tempus.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.23.0", features = ["derive"] }
fontdue = "0.9.3"
lazy_static = "1.5.0"
log = "0.4.14"
num-format = { version = "0.4.3", features = ["with-system-locale"] }
pollster = "0.4.0"
rand = { version = "0.9.1", features = ["small_rng"] }
wgpu = { version = "0.20.0" }
winit = "0.29.0"
